@@ -1,3 +1,9 @@
+25 July 2007
++ Fixed bug #1690698: Cannot create a new .htaccess file if original
+  is deleted. Thanks singletrack
++ Fixed bug #1690544: If the .htaccess file is not writable or
+  missing, give the user a warning message.
+
 8 June 2007
 + Locale file updated.
 
